--- a/haproxy.yml
+++ b/haproxy.yml
@@ -6,6 +6,6 @@
       apt: name={{ item }} update_cache=yes state=latest force_apt_get=yes
       loop: [ 'aptitude' ]
 
-    - name: "Configure Load balancer"
+    - name: "Install haproxy Load balancer"
           package:
             name: haproxy
