--- a/nginxplaybook.yml
+++ b/nginxplaybook.yml
@@ -7,9 +7,6 @@
     # - name: Install PHP Remi Repository
     #   yum: name=http://rpms.remirepo.net/enterprise/remi-release-7.rpm update_cache=yes state=latest
     
-    # # - name: Enable PHP Remi Repository
-    # #   # command: dnf module reset php -y
-    # #   command: dnf enable php:remi-7.3 -y
     # - name: Installing php and extensions
     #   yum:
     #     enablerepo: "remi,remi-php70"
@@ -30,16 +27,6 @@
     #       - php-zip
     #     state: latest
 
-    # # - name: Install PHP Extensions
-    # #   yum: name={{ item }} update_cache=yes state=latest
-    # #   loop: 'php', 'php-curl', 'php-gd', 'php-mbstring', 'php-xml', 'php-xmlrpc', 'php-soap', 'php-intl', 'php-zip'
-
-    # # - name: Install MySQL Packages
-    # #   yum: 
-    # #     name: 
-    # #       - mysql-community-server
-    # #       - php-mysqlnd
-    # #       - python3-PyMySQL
     # - name: Install Mysql Repository
     #   yum: name=https://dev.mysql.com/get/mysql57-community-release-el7-9.noarch.rpm update_cache=yes state=latest
 
@@ -47,88 +34,104 @@
     #   yum:
     #     name:
     #       - mysql-server
-
-    # # Examples from Ansible Playbooks
-    # # - name: install pip 
-    # # - easy_install:
-    # #     name: pip
-    # #     state: latest
-                      
-    # - name: Install Required pip modules
-    #   pip:
-    #     name: pymysql
+    # - name: Install MySQL-python, this is required for the task remove anonymous user
+    #   yum: 
+    #     name: 
+    #       - MySQL-python 
     #     state: present
-    #     executable: pip3
 
-    - name: Install MySQL-python, this is required for the task remove anonymous user
-      yum: 
-        name: 
-          - MySQL-python 
-        state: present
+    # - name: Start mysqld service
+    #   systemd: name=mysqld state=started enabled=yes
 
-    - name: Start mysqld service
-      systemd: name=mysqld state=started enabled=yes
+      
+    # - name: Set MySQL root Password
+    #   mysql_user:
+    #     login_host: 'localhost'
+    #     login_user: 'root'
+    #     login_password: ''
+    #     name: 'root'
+    #     password: 'password'
+    #     state: present
+
+    # - name: Install MySQL Packages
+    #   yum: name={{ item }} update_cache=yes state=latest
+    #   loop: [ 'mysql-server', 'php-mysqlnd', 'python3-PyMySQL' ]
+ 
+    # - name: Start mysqld service
+    #   systemd: name=mysqld state=started enabled=yes
  
     - name: Set MySQL root Password
       mysql_user:
         login_host: 'localhost'
         login_user: 'root'
-        login_password: ''
+        login_password: 'h<Z24Or&i*/r'
         name: 'root'
         password: 'password'
         state: present
- 
-    - name: Creates database for WordPress
-      mysql_db:
-        name: "wpdb"
-        state: present
-        login_user: root
-        login_password: "password"
- 
-    - name: Create MySQL user for WordPress
-      mysql_user:
-        name: "wpuser"
-        password: "password"
-        priv: "wpdb.*:ALL"
-        state: present
-        login_user: root
-        login_password: "password"     
+        login_unix_socket: /var/lib/mysql/mysql.sock
 
-    - name: Download and unpack latest WordPress
-      unarchive:
-        src: https://wordpress.org/latest.tar.gz
-        dest: "/var/www/devops"
-        remote_src: yes
-        creates: "/var/www/devops/wordpress"
+    # - name: Create mysql user
+    #   mysql_user:
+    #     name: "wpuser"
+    #     password: "password"
+    #     priv: '*.*:ALL'
+    #     host: '%'
+    #     state: present
+    #     login_unix_socket: /var/run/mysqld/mysqld.sock
  
-    - name: Set ownership
-      file:
-        path: "/var/www/devops"
-        state: directory
-        recurse: yes
-        owner: apache
-        group: apache
+    # - name: Creates database for WordPress
+    #   mysql_db:
+    #     name: "wpdb"
+    #     state: present
+    #     login_user: root
+    #     login_password: "password"
+        
  
-    - name: Set permissions for directories
-      shell: "/usr/bin/find /var/www/devops/wordpress/ -type d -exec chmod 750 {} \\;"
+    # - name: Create MySQL user for WordPress
+    #   mysql_user:
+    #     name: "wpuser"
+    #     password: "password"
+    #     priv: "wpdb.*:ALL"
+    #     state: present
+    #     login_user: root
+    #     login_password: "password"   
+    #     login_unix_socket: /var/run/mysqld/mysqld.sock  
+
+    # - name: Download and unpack latest WordPress
+    #   unarchive:
+    #     src: https://wordpress.org/latest.tar.gz
+    #     dest: "/var/www/devops"
+    #     remote_src: yes
+    #     creates: "/var/www/devops/wordpress"
  
-    - name: Set permissions for files
-      shell: "/usr/bin/find /var/www/devops/wordpress/ -type f -exec chmod 640 {} \\;"
+    # - name: Set ownership
+    #   file:
+    #     path: "/var/www/devops"
+    #     state: directory
+    #     recurse: yes
+    #     owner: apache
+    #     group: apache
  
-    - name: Copy sample config file
-      command: mv /var/www/devops/wordpress/wp-config-sample.php /var/www/devops/wordpress/wp-config.php creates=/var/www/devops/wordpress/wp-config.php
-      become: yes
+    # - name: Set permissions for directories
+    #   shell: "/usr/bin/find /var/www/devops/wordpress/ -type d -exec chmod 750 {} \\;"
  
-    - name: Update WordPress config file
-      lineinfile:
-        path: "/var/www/devops/wordpress/wp-config.php"
-        regexp: "{{item.regexp}}"
-        line: "{{item.line}}"
-      with_items:
-        - {'regexp': "define\\( 'DB_NAME', '(.)+' \\);", 'line': "define( 'DB_NAME', 'wpdb' );"}
-        - {'regexp': "define\\( 'DB_USER', '(.)+' \\);", 'line': "define( 'DB_USER', 'wpuser' );"}
-        - {'regexp': "define\\( 'DB_PASSWORD', '(.)+' \\);", 'line': "define( 'DB_PASSWORD', 'password' );"}
+    # - name: Set permissions for files
+    #   shell: "/usr/bin/find /var/www/devops/wordpress/ -type f -exec chmod 640 {} \\;"
+ 
+    # - name: Copy sample config file
+    #   command: mv /var/www/devops/wordpress/wp-config-sample.php /var/www/devops/wordpress/wp-config.php creates=/var/www/devops/wordpress/wp-config.php
+    #   become: yes
+ 
+    # - name: Update WordPress config file
+    #   lineinfile:
+    #     path: "/var/www/devops/wordpress/wp-config.php"
+    #     regexp: "{{item.regexp}}"
+    #     line: "{{item.line}}"
+    #   with_items:
+    #     - {'regexp': "define\\( 'DB_NAME', '(.)+' \\);", 'line': "define( 'DB_NAME', 'wpdb' );"}
+    #     - {'regexp': "define\\( 'DB_USER', '(.)+' \\);", 'line': "define( 'DB_USER', 'wpuser' );"}
+    #     - {'regexp': "define\\( 'DB_PASSWORD', '(.)+' \\);", 'line': "define( 'DB_PASSWORD', 'password' );"}
      
-    - name: Restart httpd service
-      systemd: name=httpd state=restarted
-      become: yes
+    # - name: Restart httpd service
+    #   systemd: name=httpd state=restarted
+    #   become: yes
