--- a/vars/default.yml
+++ b/vars/default.yml
@@ -11,3 +11,8 @@ mysql_password: "password"
 http_host: "wp.example.com"
 http_conf: "wp.example.com.conf"
 http_port: "80"
+
+# This is used for the nginx server configuration, but access to the
+# WordPress site is not restricted by a named host.
+nginx_port: 80
+server_hostname: 172.28.128.3
