--- a/roles/wordpress/tasks/wpubuntu.yml
+++ b/roles/wordpress/tasks/wpubuntu.yml
@@ -3,10 +3,9 @@
   file:
     path: "/var/www/{{ http_host }}"
     state: directory
-    owner: "nginx"
-    group: "nginx"
+    owner: "www-data"
+    group: "www-data"
     mode: '0755'
-  tags: [ nginx ]
 
 - name: Download and unpack latest WordPress
   unarchive:
@@ -21,13 +20,12 @@
     path: "/var/www/{{ http_host }}"
     state: directory
     recurse: yes
-    owner: nginx
-    group: nginx
-  tags: [ wordpress ]
+    owner: www-data
+    group: www-data
 
 - name: Set permissions for directories
   shell: "/usr/bin/find /var/www/{{ http_host }}/wordpress/ -type d -exec chmod 750 {} \\;"
-  tags: [ wordpress ]
+
 
 - name: Set permissions for files
   shell: "/usr/bin/find /var/www/{{ http_host }}/wordpress/ -type f -exec chmod 640 {} \\;"
