--- a/vars/default.yml
+++ b/vars/default.yml
@@ -2,10 +2,10 @@
 php_modules: [ 'php', 'php-curl', 'php-gd', 'php-mbstring', 'php-xml', 'php-xmlrpc', 'php-soap', 'php-intl', 'php-zip' ]
  
 #MySQL Settings
-mysql_root_password: "password"
+
 mysql_db: "wpdb"
 mysql_user: "wpuser"
-mysql_password: "password"
+mysql_password: "Devops1!"
  
 #HTTP Settings
 mysql_root_password: "Devops1!"
@@ -16,4 +16,4 @@ http_port: "80"
 # This is used for the nginx server configuration, but access to the
 # WordPress site is not restricted by a named host.
 nginx_port: 80
-server_hostname: 172.28.128.3
+server_hostname: 172.28.128.4
