--- a/roles/php/handlers/main.yml
+++ b/roles/php/handlers/main.yml
@@ -1,12 +1,26 @@
 - name: restart php-fpm
   service: name=php-fpm state=restarted
 
-- name: restart nginx
+- name: reload nginx
   service:
     name: nginx
     state: restarted
-
+    
+- name: reload nginx
+  service:
+    name: nginx
+    state: reloaded
 - name: restart php
   service:
     name: php-fpm
+    state: restarted
+        
+- name: Reload Nginx
+  service:
+    name: nginx
+    state: reloaded
+
+- name: Restart Nginx
+  service:
+    name: nginx
     state: restarted
