--- a/roles/mysql/tasks/mysqlubuntu.yml
+++ b/roles/mysql/tasks/mysqlubuntu.yml
@@ -4,12 +4,12 @@
       - mysql-server
       - python3-pymysql
 
-# - name: Set the root password
-#   mysql_user:
-#     name: root
-#     password: "{{ mysql_root_password }}"
-#     login_unix_socket: /var/run/mysqld/mysqld.sock
-#   tags: [ mysql, mysql-root ]
+- name: Set the root password
+  mysql_user:
+    name: root
+    password: "{{ mysql_root_password }}"
+    login_unix_socket: /var/run/mysqld/mysqld.sock
+  tags: [ mysql, mysql-root ]
 
 - name: Remove all anonymous user accounts
   mysql_user:
