--- a/roles/mysql/tasks/mysqlubuntu.yml
+++ b/roles/mysql/tasks/mysqlubuntu.yml
@@ -4,29 +4,30 @@
       - mysql-server
       - python3-pymysql
 
-- name: Set the root password
+- name: Create MySQL user for WordPress
   mysql_user:
-    name: root
-    password: "{{ mysql_root_password }}"
+    name: "{{ mysql_user }}"
+    password: "{{ mysql_password }}"
+    priv: "{{ mysql_db }}.*:ALL"
+    state: present
     login_unix_socket: /var/run/mysqld/mysqld.sock
-  tags: [ mysql, mysql-root ]
 
-- name: Remove all anonymous user accounts
-  mysql_user:
-    name: ''
-    host_all: yes
-    state: absent
-    login_user: root
-    login_password: "{{ mysql_root_password }}"
-  tags: [ mysql ]
+# - name: Remove all anonymous user accounts
+#   mysql_user:
+#     name: ''
+#     host_all: yes
+#     state: absent
+#     login_user: root
+#     login_password: "{{ mysql_root_password }}"
+#   tags: [ mysql ]
 
-- name: Remove the MySQL test database
-  mysql_db:
-    name: test
-    state: absent
-    login_user: root
-    login_password: "{{ mysql_root_password }}"
-  tags: [ mysql ]
+# - name: Remove the MySQL test database
+#   mysql_db:
+#     name: test
+#     state: absent
+#     login_user: root
+#     login_password: "{{ mysql_root_password }}"
+#   tags: [ mysql ]
 
 - name: Creates database for WordPress
   mysql_db:
@@ -34,15 +35,7 @@
     state: present
     login_user: root
     login_password: "{{ mysql_root_password }}"
+    login_unix_socket: /var/run/mysqld/mysqld.sock
   tags: [ mysql ]
 
-- name: Create MySQL user for WordPress
-  mysql_user:
-    name: "{{ mysql_user }}"
-    password: "{{ mysql_password }}"
-    priv: "{{ mysql_db }}.*:ALL"
-    state: present
-    login_user: root
-    login_password: "{{ mysql_root_password }}"
-  tags: [ mysql ]
 
